--- a/rsc/html/Main-Banner3.html
+++ b/rsc/html/Main-Banner3.html
@@ -3,6 +3,23 @@
     </head>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+        .fancy {
+            position: relative;
+            white-space: nowrap;
+            &:after {
+              --deco-height: 0.3125em;
+              content: "";
+              position: absolute;
+              left: 0;
+              right: 0;
+              bottom: calc(var(--deco-height) * -0.625);
+              height: var(--deco-height);
+              background-image: url("data:image/svg+xml,%3Csvg width='100' height='64' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23a)'%3E%3Cpath d='M-17 30.5C-1 22 72-4 54 13 37.9 28.2-2.5 57.5 16 55.5s72-29 104-40' stroke='%233670a0' stroke-width='10'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='a'%3E%3Cpath fill='%23fff' d='M0 0h100v64H0z'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+              background-size: auto 100%;
+              background-repeat: round;
+              background-position: 0em;
+            }
+        }
         .fancy_list{
             display: grid;
             place-items: center;
@@ -78,21 +95,33 @@
     </h3>
     <ul>
         <li>
-            <h5>Desaf&iacute;os Integrados</h5>
+            <h5>
+                <span class="fancy">
+                    Desaf&iacute;os Integrados
+                </span>
+            </h5>
             <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
                 Resuelve desaf&iacute;os directamente desde el editor, sumergi&eacute;ndote en una experiencia de resoluci&oacute;n de
                 problemas sin interrupciones y centrada en Python.
             </p>
         </li>
         <li>
-            <h5>Realimentaci&oacute;n Instant&aacute;nea</h5>
+            <h5>
+                <span class="fancy">
+                    Realimentaci&oacute;n Instant&aacute;nea
+                </span>
+            </h5>
             <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
                 Recibe retroalimentaci&oacute;n inmediata sobre tus soluciones. Cada l&iacute;nea de c&oacute;digo te gu&iacute;a
                 hacia la excelencia, acelerando tu aprendizaje y perfeccionando tus habilidades.
             </p>
         </li>
         <li>
-            <h5>Herramientas Avanzadas</h5>
+            <h5>
+                <span class="fancy">
+                    Herramientas Avanzadas
+                </span>
+            </h5>
             <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
                 Experimenta con herramientas de formateo y resaltado de sintaxis que hacen que tu c&oacute;digo sea pulido y
                 f&aacute;cil de entender, proporcionando una experiencia de codificaci&oacute;n elegante.
