Update padding and deprecate show_logos function

--- a/rsc/html/footer.html
+++ b/rsc/html/footer.html
@@ -31,7 +31,7 @@ body .footer .bubbles .bubble {
   transform: translate(-50%, 100%);
 }
 body .footer .content {
-  padding: 6rem 1rem 2rem;
+  padding: 3rem 1rem 2rem 1rem;
   background: var(--footer-background);
   z-index: 2;
   text-align: center;
