Update Main-Banner2 and Main-Banner3 HTML files

--- a/rsc/html/Main-Banner2.html
+++ b/rsc/html/Main-Banner2.html
@@ -104,8 +104,8 @@
                 </span>
             </h5>
             <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
-            Avanza a problemas m&aacute;s desafiantes que pondr&aacute;n a prueba tu comprensi&oacute;n y aplicaci&oacute;n de conceptos
-            intermedios de programaci&oacute;n. Perfecto para aquellos que buscan mejorar sus habilidades.
+                Enfrenta desaf&iacute;os que pondr&aacute;n a prueba tus habilidades de programaci&oacute;n,<br>
+                ideal para mejorar tu comprensi&oacute;n y aplicaci&oacute;n de conceptos intermedios y mejorar tu l&oacute;gica.
             </p>
         </li>
         <li>
