--- a/rsc/html/Main-Banner3.html
+++ b/rsc/html/Main-Banner3.html
@@ -101,8 +101,8 @@
                 </span>
             </h5>
             <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
-                Resuelve desaf&iacute;os directamente desde el editor, sumergi&eacute;ndote en una experiencia de resoluci&oacute;n de
-                problemas sin interrupciones y centrada en Python.
+                Resuelve desaf&iacute;os directamente desde el editor, sumergi&eacute;ndote en una experiencia de<br>
+                resoluci&oacute;n de problemas sin interrupciones y centrada en Python.
             </p>
         </li>
         <li>
@@ -112,8 +112,8 @@
                 </span>
             </h5>
             <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
-                Recibe retroalimentaci&oacute;n inmediata sobre tus soluciones. Cada l&iacute;nea de c&oacute;digo te gu&iacute;a
-                hacia la excelencia, acelerando tu aprendizaje y perfeccionando tus habilidades.
+                Recibe retroalimentaci&oacute;n inmediata sobre tus soluciones. Cada l&iacute;nea de c&oacute;digo te <br>
+                gu&iacute;a hacia la excelencia, acelerando tu aprendizaje y perfeccionando tus habilidades.
             </p>
         </li>
         <li>
@@ -123,8 +123,8 @@
                 </span>
             </h5>
             <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
-                Experimenta con herramientas de formateo y resaltado de sintaxis que hacen que tu c&oacute;digo sea pulido y
-                f&aacute;cil de entender, proporcionando una experiencia de codificaci&oacute;n elegante.
+                Experimenta con herramientas de formateo y resaltado de sintaxis que hacen que tu c&oacute;digo<br>
+                sea pulido y f&aacute;cil de entender, proporcionando una experiencia de codificaci&oacute;n elegante.
             </p>
         </li>
     </ul>
