Update HTML and Python files

--- a/rsc/html/Main-Banner4.html
+++ b/rsc/html/Main-Banner4.html
@@ -22,7 +22,7 @@
 	    padding: 1rem;
 	    display: grid;
 	    place-items: center;
-	    min-height: 80vh;
+	    min-height: 60vh;
     }
     .fancy_list ul {
         list-style-position: inside;
@@ -86,34 +86,24 @@
         <li>
             <h5>
                 <span class="fancy">
-                    Problemas B&aacute;sicos
+                    Concursos Regulares
                 </span>
             </h5>
             <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
-            Ideal para aquellos que est&aacute;n dando sus primeros pasos en el mundo de la programaci&oacute;n.<br>
-            Estos problemas proporcionan una base s&oacute;lida para fortalecer tus habilidades esenciales.
+                Pon a prueba tus habilidades en nuestros concursos peri&oacute;dicos, donde tendr&aacute;s la oportunidad
+                de competir con otros miembros del club y medir tu progreso.
             </p>
         </li>
         <li>
             <h5>
                 <span class="fancy">
-                    Problemas Intermedios
+                    Eventos Especiales
                 </span>
             </h5>
             <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
-                Enfrenta desaf&iacute;os que pondr&aacute;n a prueba tus habilidades de programaci&oacute;n,<br>
-                ideal para mejorar tu comprensi&oacute;n y aplicaci&oacute;n de conceptos intermedios y mejorar tu l&oacute;gica.
-            </p>
-        </li>
-        <li>
-            <h5>
-                <span class="fancy">
-                    Problemas Avanzados
-                </span>
-            </h5>
-            <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
-            Para los programadores experimentados que buscan un desaf&iacute;o significativo.<br>
-            Estos problemas te llevar&aacute;n a explorar soluciones avanzadas y t&eacute;cnicas m&aacute;s sofisticadas.
+                Participa en nuestros desaf&iacute;os tem&aacute;ticos y eventos especiales. Desde competiciones tem&aacute;ticas hasta retos
+                de fin de semana, siempre hay algo emocionante en marcha para poner a prueba tus l&iacute;mites y fomentar
+                la camarader&iacute;a en nuestra comunidad.
             </p>
         </li>
     </ul>
