Update lottie animation quality

--- a/rsc/html/Main-Banner4.html
+++ b/rsc/html/Main-Banner4.html
@@ -90,8 +90,8 @@
                 </span>
             </h5>
             <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
-                Pon a prueba tus habilidades en nuestros concursos peri&oacute;dicos, donde tendr&aacute;s la oportunidad
-                de competir con otros miembros del club y medir tu progreso.
+                Pon a prueba tus habilidades en nuestros concursos peri&oacute;dicos, donde tendr&aacute;s<br>
+                la oportunidad de competir con otros miembros del club y medir tu progreso.
             </p>
         </li>
         <li>
@@ -101,9 +101,9 @@
                 </span>
             </h5>
             <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
-                Participa en nuestros desaf&iacute;os tem&aacute;ticos y eventos especiales. Desde competiciones tem&aacute;ticas hasta retos
-                de fin de semana, siempre hay algo emocionante en marcha para poner a prueba tus l&iacute;mites y fomentar
-                la camarader&iacute;a en nuestra comunidad.
+                Participa en nuestros desaf&iacute;os tem&aacute;ticos y eventos especiales.<br>
+                Desde competiciones tem&aacute;ticas hasta retosde fin de semana,siempre hay algo emocionante<br>
+                en marcha para poner a prueba tus l&iacute;mites y fomentarla camarader&iacute;a en nuestra comunidad.
             </p>
         </li>
     </ul>
