--- a/rsc/html/Main-Banner2.html
+++ b/rsc/html/Main-Banner2.html
@@ -22,12 +22,12 @@
 	    padding: 1rem;
 	    display: grid;
 	    place-items: center;
-	    min-height: 80vh;
+	    min-height: 50vh;
     }
     .fancy_list ul {
         list-style-position: inside;
-        width: 800px;
-        max-width: 100%;
+        width: 100%;
+        max-width: 800px;
         background: white;
         box-shadow: 0.25rem 0.25rem 0.75rem rgb(0 0 0 / 0.15);
         padding: 0;
@@ -55,12 +55,13 @@
     .fancy_list li:nth-child(3n - 1)::marker {
         content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xml:space='preserve' width='14' viewBox='0 0 50 50'%3E%3Cpath d='M48.3 23.7c-1-9.9-9.9-15.6-18.8-17.8-8.2-2.1-18.8-2.6-24.6 4.8C.6 16.2 1 23.6 4.3 29.3c-.5 1-.8 2-1 3-.6 4 2 7.6 5.1 10 5.9 4.4 14 4.2 19.6-.4 1.5 0 2.9-.2 4.4-.5 1.8 0 3.5 0 5.3-.1 2.3-.1 3.5-1.9 3.5-3.7 4.5-3.3 7.7-8.2 7.1-13.9zM9.1 17.8c1.1-4.1 4.9-5.8 8.8-6.1.9-.1 1.9-.1 2.9-.1-3.2 1.6-6.3 4.6-8 7.4-.1.1-.1.2-.2.3-1.1.9-2.1 1.9-3 2.9-.2.2-.4.4-.5.6-.4-1.7-.5-3.3 0-5z'/%3E%3C/svg%3E") ' ';
     }
-    lista {
-        display: flex;
-        flex-direction: row;
+    .lista {
+        display: none;
+        flex-direction: column;
         column-gap: 1rem;
         transition: all 150ms ease-out;
         justify-content: center;
+        row-gap: 1rem;
     }
     .fancy_list h5 {
         font-size: 1.5rem;
@@ -76,7 +77,18 @@
         margin: 0;
         padding: 0;
         color: #000;
-        font-family: cursive;
+        font-family: 'Raleway';
+    }
+
+
+    @media (max-width: 600px) {
+        .fancy_list ul {
+            width: 50%; /* Ajusta el ancho para dispositivos pequeños */
+            display: none;
+        }
+        .lista{
+            display: flex;
+        }
     }
 </style>
 <div class="fancy_list">
@@ -89,7 +101,7 @@
                     Problemas B&aacute;sicos
                 </span>
             </h5>
-            <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
+            <p style="text-align: justify;font-family: 'Raleway';font-size: 1rem;">
             Ideal para aquellos que est&aacute;n dando sus primeros pasos en el mundo de la programaci&oacute;n.<br>
             Estos problemas proporcionan una base s&oacute;lida para fortalecer tus habilidades esenciales.
             </p>
@@ -100,7 +112,7 @@
                     Problemas Intermedios
                 </span>
             </h5>
-            <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
+            <p style="text-align: justify;font-family: 'Raleway';font-size: 1rem;">
                 Enfrenta desaf&iacute;os que pondr&aacute;n a prueba tus habilidades de programaci&oacute;n,<br>
                 ideal para mejorar tu comprensi&oacute;n y aplicaci&oacute;n de conceptos intermedios y mejorar tu l&oacute;gica.
             </p>
@@ -111,10 +123,46 @@
                     Problemas Avanzados
                 </span>
             </h5>
-            <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
+            <p style="text-align: justify;font-family: 'Raleway';font-size: 1rem;">
             Para los programadores experimentados que buscan un desaf&iacute;o significativo.<br>
             Estos problemas te llevar&aacute;n a explorar soluciones avanzadas y t&eacute;cnicas m&aacute;s sofisticadas.
             </p>
         </li>
     </ul>
 </div>
+<!-- For mobile devices and small screens -->
+<ul class="lista">
+    <li>
+        <h5>
+            <span class="fancy">
+                Problemas B&aacute;sicos
+            </span>
+        </h5>
+        <p style="text-align: justify;font-family: 'Raleway';font-size: 1rem;">
+        Ideal para aquellos que est&aacute;n dando sus primeros pasos en el mundo de la programaci&oacute;n.
+        Estos problemas proporcionan una base s&oacute;lida para fortalecer tus habilidades esenciales.
+        </p>
+    </li>
+    <li>
+        <h5>
+            <span class="fancy">
+                Problemas Intermedios
+            </span>
+        </h5>
+        <p style="text-align: justify;font-family: 'Raleway';font-size: 1rem;">
+            Enfrenta desaf&iacute;os que pondr&aacute;n a prueba tus habilidades de programaci&oacute;n,
+            ideal para mejorar tu comprensi&oacute;n y aplicaci&oacute;n de conceptos intermedios y mejorar tu l&oacute;gica.
+        </p>
+    </li>
+    <li>
+        <h5>
+            <span class="fancy">
+                Problemas Avanzados
+            </span>
+        </h5>
+        <p style="text-align: justify;font-family: 'Raleway';font-size: 1rem;">
+        Para los programadores experimentados que buscan un desaf&iacute;o significativo.
+        Estos problemas te llevar&aacute;n a explorar soluciones avanzadas y t&eacute;cnicas m&aacute;s sofisticadas.
+        </p>
+    </li>
+</ul>
