--- a/rsc/html/Main-Banner3.html
+++ b/rsc/html/Main-Banner3.html
@@ -55,12 +55,13 @@
     .fancy_list li:nth-child(3n - 1)::marker {
         content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xml:space='preserve' width='14' viewBox='0 0 50 50'%3E%3Cpath d='M48.3 23.7c-1-9.9-9.9-15.6-18.8-17.8-8.2-2.1-18.8-2.6-24.6 4.8C.6 16.2 1 23.6 4.3 29.3c-.5 1-.8 2-1 3-.6 4 2 7.6 5.1 10 5.9 4.4 14 4.2 19.6-.4 1.5 0 2.9-.2 4.4-.5 1.8 0 3.5 0 5.3-.1 2.3-.1 3.5-1.9 3.5-3.7 4.5-3.3 7.7-8.2 7.1-13.9zM9.1 17.8c1.1-4.1 4.9-5.8 8.8-6.1.9-.1 1.9-.1 2.9-.1-3.2 1.6-6.3 4.6-8 7.4-.1.1-.1.2-.2.3-1.1.9-2.1 1.9-3 2.9-.2.2-.4.4-.5.6-.4-1.7-.5-3.3 0-5z'/%3E%3C/svg%3E") ' ';
     }
-    lista {
-        display: flex;
-        flex-direction: row;
+    .lista {
+        display: none;
+        flex-direction: column;
         column-gap: 1rem;
         transition: all 150ms ease-out;
         justify-content: center;
+        row-gap: 1rem;
     }
     .fancy_list h5 {
         font-size: 1.5rem;
@@ -76,7 +77,7 @@
         margin: 0;
         padding: 0;
         color: #000;
-        font-family: cursive;
+        font-family: 'Raleway';
     }
     h3 {
         font-size: 2rem;
@@ -85,6 +86,16 @@
         padding: 0;
         color: #000;
         font-family: 'Bebas Neue';
+    }
+
+    @media (max-width: 600px) {
+        .fancy_list ul {
+            width: 50%; /* Ajusta el ancho para dispositivos pequeños */
+            display: none;
+        }
+        .lista{
+            display: flex;
+        }
     }
 </style>
 <div class="fancy_list">
@@ -97,7 +108,7 @@
                     Desaf&iacute;os Integrados
                 </span>
             </h5>
-            <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
+            <p style="text-align: justify;font-family: 'Raleway';font-size: 1rem;">
                 Resuelve desaf&iacute;os directamente desde el editor, sumergi&eacute;ndote en una experiencia de<br>
                 resoluci&oacute;n de problemas sin interrupciones y centrada en Python.
             </p>
@@ -108,7 +119,7 @@
                     Realimentaci&oacute;n Instant&aacute;nea
                 </span>
             </h5>
-            <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
+            <p style="text-align: justify;font-family: 'Raleway';font-size: 1rem;">
                 Recibe retroalimentaci&oacute;n inmediata sobre tus soluciones. Cada l&iacute;nea de c&oacute;digo te <br>
                 gu&iacute;a hacia la excelencia, acelerando tu aprendizaje y perfeccionando tus habilidades.
             </p>
@@ -119,10 +130,46 @@
                     Herramientas Avanzadas
                 </span>
             </h5>
-            <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
+            <p style="text-align: justify;font-family: 'Raleway';font-size: 1rem;">
                 Experimenta con herramientas de formateo y resaltado de sintaxis que hacen que tu c&oacute;digo<br>
                 sea pulido y f&aacute;cil de entender, proporcionando una experiencia de codificaci&oacute;n elegante.
             </p>
         </li>
     </ul>
 </div>
+<!-- For mobile devices and small screens -->
+<ul class="lista">
+    <li>
+        <h5>
+            <span class="fancy">
+                Desaf&iacute;os Integrados
+            </span>
+        </h5>
+        <p style="text-align: justify;font-family: 'Raleway';font-size: 1rem;">
+            Resuelve desaf&iacute;os directamente desde el editor, sumergi&eacute;ndote en una experiencia de
+            resoluci&oacute;n de problemas sin interrupciones y centrada en Python.
+        </p>
+    </li>
+    <li>
+        <h5>
+            <span class="fancy">
+                Realimentaci&oacute;n Instant&aacute;nea
+            </span>
+        </h5>
+        <p style="text-align: justify;font-family: 'Raleway';font-size: 1rem;">
+            Recibe retroalimentaci&oacute;n inmediata sobre tus soluciones. Cada l&iacute;nea de c&oacute;digo te
+            gu&iacute;a hacia la excelencia, acelerando tu aprendizaje y perfeccionando tus habilidades.
+        </p>
+    </li>
+    <li>
+        <h5>
+            <span class="fancy">
+                Herramientas Avanzadas
+            </span>
+        </h5>
+        <p style="text-align: justify;font-family: 'Raleway';font-size: 1rem;">
+            Experimenta con herramientas de formateo y resaltado de sintaxis que hacen que tu c&oacute;digo
+            sea pulido y f&aacute;cil de entender, proporcionando una experiencia de codificaci&oacute;n elegante.
+        </p>
+    </li>
+</ul>
