--- a/rsc/html/Main-Banner5.html
+++ b/rsc/html/Main-Banner5.html
@@ -55,12 +55,13 @@
     .fancy_list li:nth-child(3n - 1)::marker {
         content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xml:space='preserve' width='14' viewBox='0 0 50 50'%3E%3Cpath d='M48.3 23.7c-1-9.9-9.9-15.6-18.8-17.8-8.2-2.1-18.8-2.6-24.6 4.8C.6 16.2 1 23.6 4.3 29.3c-.5 1-.8 2-1 3-.6 4 2 7.6 5.1 10 5.9 4.4 14 4.2 19.6-.4 1.5 0 2.9-.2 4.4-.5 1.8 0 3.5 0 5.3-.1 2.3-.1 3.5-1.9 3.5-3.7 4.5-3.3 7.7-8.2 7.1-13.9zM9.1 17.8c1.1-4.1 4.9-5.8 8.8-6.1.9-.1 1.9-.1 2.9-.1-3.2 1.6-6.3 4.6-8 7.4-.1.1-.1.2-.2.3-1.1.9-2.1 1.9-3 2.9-.2.2-.4.4-.5.6-.4-1.7-.5-3.3 0-5z'/%3E%3C/svg%3E") ' ';
     }
-    lista {
-        display: flex;
-        flex-direction: row;
+    .lista {
+        display: none;
+        flex-direction: column;
         column-gap: 1rem;
         transition: all 150ms ease-out;
         justify-content: center;
+        row-gap: 1rem;
     }
     .fancy_list h5 {
         font-size: 1.5rem;
@@ -76,7 +77,16 @@
         margin: 0;
         padding: 0;
         color: #000;
-        font-family: cursive;
+        font-family: 'Raleway';
+    }
+    @media (max-width: 600px) {
+        .fancy_list ul {
+            width: 50%; /* Ajusta el ancho para dispositivos pequeños */
+            display: none;
+        }
+        .lista{
+            display: flex;
+        }
     }
 </style>
 <div class="fancy_list">
@@ -89,7 +99,7 @@
                     Pruebas B&aacute;sicas
                 </span>
             </h5>
-            <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
+            <p style="text-align: justify;font-family: 'Raleway';font-size: 1rem;">
                 Ideal para principiantes y aquellos que buscan fortalecer sus fundamentos.<br>
                 Estas pruebas ofrecen ejercicios dise&ntilde;ados para consolidar tus conocimientos y habilidades b&aacute;sicas.
             </p>
@@ -100,7 +110,7 @@
                     Pruebas Intermedias
                 </span>
             </h5>
-            <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
+            <p style="text-align: justify;font-family: 'Raleway';font-size: 1rem;">
                 Da el siguiente paso en tu desarrollo con desaf&iacute;os intermedios que requieren<br>
                 un enfoque m&aacute;s elaborado.<br>
                 Perfectas para quienes desean ampliar sus habilidades y enfrentarse a problemas m&aacute;s complejos.
@@ -112,7 +122,7 @@
                     Pruebas Avanzadas
                 </span>
             </h5>
-            <p style="text-align: justify;font-family: cursive;font-size: 1rem;">
+            <p style="text-align: justify;font-family: 'Raleway';font-size: 1rem;">
                 Para los expertos en la materia, estas pruebas te pondr&aacute;n a prueba con problemas avanzados<br>
                 que requieren un pensamiento profundo y soluciones t&eacute;cnicas.<br>
                 Ideal para aquellos que buscan desaf&iacute;os significativos y desean perfeccionar sus habilidades.
@@ -120,3 +130,41 @@
         </li>
     </ul>
 </div>
+<!-- For mobile devices and small screens -->
+<ul class="lista">
+    <li>
+        <h5>
+            <span class="fancy">
+                Pruebas B&aacute;sicas
+            </span>
+        </h5>
+        <p style="text-align: justify;font-family: 'Raleway';font-size: 1rem;">
+            Ideal para principiantes y aquellos que buscan fortalecer sus fundamentos.
+            Estas pruebas ofrecen ejercicios dise&ntilde;ados para consolidar tus conocimientos y habilidades b&aacute;sicas.
+        </p>
+    </li>
+    <li>
+        <h5>
+            <span class="fancy">
+                Pruebas Intermedias
+            </span>
+        </h5>
+        <p style="text-align: justify;font-family: 'Raleway';font-size: 1rem;">
+            Da el siguiente paso en tu desarrollo con desaf&iacute;os intermedios que requieren
+            un enfoque m&aacute;s elaborado.
+            Perfectas para quienes desean ampliar sus habilidades y enfrentarse a problemas m&aacute;s complejos.
+        </p>
+    </li>
+    <li>
+        <h5>
+            <span class="fancy">
+                Pruebas Avanzadas
+            </span>
+        </h5>
+        <p style="text-align: justify;font-family: 'Raleway';font-size: 1rem;">
+            Para los expertos en la materia, estas pruebas te pondr&aacute;n a prueba con problemas avanzados
+            que requieren un pensamiento profundo y soluciones t&eacute;cnicas.
+            Ideal para aquellos que buscan desaf&iacute;os significativos y desean perfeccionar sus habilidades.
+        </p>
+    </li>
+</ul>
