Update headlogos.html for responsive design

--- a/rsc/html/headlogos.html
+++ b/rsc/html/headlogos.html
@@ -31,7 +31,18 @@
         flex-direction: row;
         width: 100%;
         padding-bottom: 0rem;
-        }
+    }
+
+    .minihead {
+        font-family: 'Bebas Neue', cursive;
+        font-size: 30px;
+        display: none;
+        justify-content: space-between;
+        flex-direction: column;
+        width: 100%;
+        padding-bottom: 0rem;
+    }
+
     #python-logo {
         max-width: 60vw;
         max-height: 60vh;
@@ -90,6 +101,16 @@
        }
     }
 
+    @media (max-width: 600px) {
+        .head {
+            display: none;
+        }
+        .minihead {
+            display: flex;
+        }
+
+    }
+
 </style>
 
 
@@ -104,6 +125,25 @@
     </li>
     <li style="list-style: none;">
         <svg width="50%" height="90%" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" id="python-logo">
+            <path d="m116 296c0-30.328125 24.671875-55 55-55h170c13.785156 0 25-11.214844 25-25v-141c0-41.355469-33.644531-75-75-75h-70c-41.355469 0-75 33.644531-75 75v41h110c8.285156 0 15 6.714844 15 15s-6.714844 15-15 15h-181c-41.355469 0-75 33.644531-75 75v70c0 41.355469 33.644531 75 75 75h41zm105-220c-8.285156 0-15-6.714844-15-15s6.714844-15 15-15 15 6.714844 15 15-6.714844 15-15 15zm0 0" />
+            <path d="m437 146h-41v70c0 30.328125-24.671875 55-55 55h-170c-13.785156 0-25 11.214844-25 25v141c0 41.355469 33.644531 75 75 75h70c41.355469 0 75-33.644531 75-75v-41h-110c-8.285156 0-15-6.714844-15-15s6.714844-15 15-15h181c41.355469 0 75-33.644531 75-75v-70c0-41.355469-33.644531-75-75-75zm-146 290c8.285156 0 15 6.714844 15 15s-6.714844 15-15 15-15-6.714844-15-15 6.714844-15 15-15zm0 0" />
+        </svg>
+    </li>
+</ul>
+
+
+
+
+<!-- For mobile devices and small screens -->
+
+<ul class="minihead">
+    <li style="list-style: none;text-align: center;">
+        <h2 style="font-family: 'Bebas Neue';font-size: 6vh;">
+            <span class="fancy">Club de Programaci&oacute;n en Python Avanzado</span>
+        </h2>
+    </li>
+    <li style="list-style: none;align-items: center;justify-content: center;display: flex;">
+        <svg width="50%" height="50%" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" id="python-logo">
             <path d="m116 296c0-30.328125 24.671875-55 55-55h170c13.785156 0 25-11.214844 25-25v-141c0-41.355469-33.644531-75-75-75h-70c-41.355469 0-75 33.644531-75 75v41h110c8.285156 0 15 6.714844 15 15s-6.714844 15-15 15h-181c-41.355469 0-75 33.644531-75 75v70c0 41.355469 33.644531 75 75 75h41zm105-220c-8.285156 0-15-6.714844-15-15s6.714844-15 15-15 15 6.714844 15 15-6.714844 15-15 15zm0 0" />
             <path d="m437 146h-41v70c0 30.328125-24.671875 55-55 55h-170c-13.785156 0-25 11.214844-25 25v141c0 41.355469 33.644531 75 75 75h70c41.355469 0 75-33.644531 75-75v-41h-110c-8.285156 0-15-6.714844-15-15s6.714844-15 15-15h181c41.355469 0 75-33.644531 75-75v-70c0-41.355469-33.644531-75-75-75zm-146 290c8.285156 0 15 6.714844 15 15s-6.714844 15-15 15-15-6.714844-15-15 6.714844-15 15-15zm0 0" />
         </svg>
