Update icons and labels in navigation bar and header logos

--- a/rsc/html/headlogos.html
+++ b/rsc/html/headlogos.html
@@ -138,7 +138,7 @@
 
 <ul class="minihead">
     <li style="list-style: none;text-align: center;">
-        <h2 style="font-family: 'Bebas Neue';font-size: 6vh;">
+        <h2 style="font-family: 'Bebas Neue';font-size: 25px;">
             <span class="fancy">Club de Programaci&oacute;n en Python Avanzado</span>
         </h2>
     </li>
