Fix menu navigation and logout functionality

--- a/rsc/html/Main-Banner1.html
+++ b/rsc/html/Main-Banner1.html
@@ -87,9 +87,9 @@
   }
 </style>
 
-<div style="text-align: center; padding-top: 8rem">
+<div style="text-align: center; padding-top: 4rem">
   <span class="welcome"
-    >&iexcl;Bienvenido al Club de Programaci&Oacute;n en Python Avanzado!</span
+    >&iexcl;Bienvenido al Club de Algoritmia y Programaci&Oacute;n en Python Avanzado!</span
   >
   <p
     style="
