--- a/rsc/html/headlogos.html
+++ b/rsc/html/headlogos.html
@@ -138,8 +138,8 @@
 
 <ul class="minihead">
     <li style="list-style: none;text-align: center;">
-        <h2 style="font-family: 'Bebas Neue';font-size: 20px;">
-            <span class="fancy">Club de Programaci&oacute;n en Python Avanzado</span>
+        <h2 style="font-family: 'Bebas Neue';font-size: 15px;">
+            <span class="fancy">Club de Algoritmia y Programaci&oacute;n en Python Avanzado</span>
         </h2>
     </li>
     <li style="list-style: none;align-items: center;justify-content: center;display: flex;">
