--- a/rsc/html/DataAHomeBanner.html
+++ b/rsc/html/DataAHomeBanner.html
@@ -57,7 +57,7 @@
         transform: translateY(200%);
       }
 </style>
-<svg width="529px" height="286px" viewBox="30 27 529 286" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="text-align: center;width: 100%;">
+<svg width="529px" height="286px" viewBox="30 27 529 286" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="text-align: center;width: 100%;padding-top: 10vh;">
     <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
     <desc>Created with Sketch.</desc>
     <defs></defs>
