Update HTML content in Main-Banner2, Main-Banner3, Main-Banner4, Main-Banner5, and Main-Banner6

--- a/rsc/html/Main-Banner2.html
+++ b/rsc/html/Main-Banner2.html
@@ -7,7 +7,7 @@
                 </span>
             </h5>
             <p>
-            Ideal para aquellos que est&aacute;n dando sus primeros pasos en el mundo de la programaci&oacute;n.<br>
+            Ideal para aquellos que est&aacute;n dando sus primeros pasos en el mundo de la programaci&oacute;n.
             Estos problemas proporcionan una base s&oacute;lida para fortalecer tus habilidades esenciales.
             </p>
         </li>
@@ -18,7 +18,7 @@
                 </span>
             </h5>
             <p>
-                Enfrenta desaf&iacute;os que pondr&aacute;n a prueba tus habilidades de programaci&oacute;n,<br>
+                Enfrenta desaf&iacute;os que pondr&aacute;n a prueba tus habilidades de programaci&oacute;n,
                 ideal para mejorar tu comprensi&oacute;n y aplicaci&oacute;n de conceptos intermedios y mejorar tu l&oacute;gica.
             </p>
         </li>
@@ -29,7 +29,7 @@
                 </span>
             </h5>
             <p>
-            Para los programadores experimentados que buscan un desaf&iacute;o significativo.<br>
+            Para los programadores experimentados que buscan un desaf&iacute;o significativo.
             Estos problemas te llevar&aacute;n a explorar soluciones avanzadas y t&eacute;cnicas m&aacute;s sofisticadas.
             </p>
         </li>
