--- a/rsc/html/Main-Banner3.html
+++ b/rsc/html/Main-Banner3.html
@@ -7,7 +7,7 @@
                 </span>
             </h5>
             <p>
-                Resuelve desaf&iacute;os directamente desde el editor, sumergi&eacute;ndote en una experiencia de<br>
+                Resuelve desaf&iacute;os directamente desde el editor, sumergi&eacute;ndote en una experiencia de
                 resoluci&oacute;n de problemas sin interrupciones y centrada en Python.
             </p>
         </li>
@@ -18,7 +18,7 @@
                 </span>
             </h5>
             <p>
-                Recibe retroalimentaci&oacute;n inmediata sobre tus soluciones. Cada l&iacute;nea de c&oacute;digo te <br>
+                Recibe retroalimentaci&oacute;n inmediata sobre tus soluciones. Cada l&iacute;nea de c&oacute;digo te
                 gu&iacute;a hacia la excelencia, acelerando tu aprendizaje y perfeccionando tus habilidades.
             </p>
         </li>
@@ -29,7 +29,7 @@
                 </span>
             </h5>
             <p>
-                Experimenta con herramientas de formateo y resaltado de sintaxis que hacen que tu c&oacute;digo<br>
+                Experimenta con herramientas de formateo y resaltado de sintaxis que hacen que tu c&oacute;digo
                 sea pulido y f&aacute;cil de entender, proporcionando una experiencia de codificaci&oacute;n elegante.
             </p>
         </li>
