--- a/rsc/html/Main-Banner4.html
+++ b/rsc/html/Main-Banner4.html
@@ -7,7 +7,7 @@
                 </span>
             </h5>
             <p>
-                Pon a prueba tus habilidades en nuestros concursos peri&oacute;dicos, donde tendr&aacute;s<br>
+                Pon a prueba tus habilidades en nuestros concursos peri&oacute;dicos, donde tendr&aacute;s
                 la oportunidad de competir con otros miembros del club y medir tu progreso.
             </p>
         </li>
@@ -18,8 +18,8 @@
                 </span>
             </h5>
             <p>
-                Participa en nuestros desaf&iacute;os tem&aacute;ticos y eventos especiales.<br>
-                Desde competiciones tem&aacute;ticas hasta retosde fin de semana,siempre hay algo emocionante<br>
+                Participa en nuestros desaf&iacute;os tem&aacute;ticos y eventos especiales.
+                Desde competiciones tem&aacute;ticas hasta retosde fin de semana,siempre hay algo emocionante
                 en marcha para poner a prueba tus l&iacute;mites y fomentarla camarader&iacute;a en nuestra comunidad.
             </p>
         </li>
