--- a/rsc/html/Main-Banner5.html
+++ b/rsc/html/Main-Banner5.html
@@ -30,8 +30,8 @@
                 </span>
             </h5>
             <p>
-                Para los expertos en la materia, estas pruebas te pondr&aacute;n a prueba con problemas avanzados<br>
-                que requieren un pensamiento profundo y soluciones t&eacute;cnicas.<br>
+                Para los expertos en la materia, estas pruebas te pondr&aacute;n a prueba con problemas avanzados
+                que requieren un pensamiento profundo y soluciones t&eacute;cnicas.
                 Ideal para aquellos que buscan desaf&iacute;os significativos y desean perfeccionar sus habilidades.
             </p>
         </li>
