--- a/rsc/html/Main-Banner6.html
+++ b/rsc/html/Main-Banner6.html
@@ -7,8 +7,8 @@
                 </span>
             </h5>
             <p>
-                Encuentra gu&iacute;as detalladas que cubren una variedad de temas, desde conceptos<br>
-                b&aacute;sicos hasta t&eacute;cnicas avanzadas.<br> Nuestra documentaci&oacute;n
+                Encuentra gu&iacute;as detalladas que cubren una variedad de temas, desde conceptos
+                b&aacute;sicos hasta t&eacute;cnicas avanzadas. Nuestra documentaci&oacute;n
                 est&aacute; dise&ntilde;ada para ayudarte a comprender cada aspecto, paso a paso.
             </p>
         </li>
@@ -20,7 +20,7 @@
             </h5>
             <p>
                 Aprende a trav&eacute;s de ejemplos pr&aacute;cticos que ilustran la aplicaci&oacute;n de conceptos
-                te&oacute;ricos<br> en situaciones del mundo real. <br>
+                te&oacute;ricos en situaciones del mundo real.
                 Los ejemplos est&aacute;n dise&ntilde;ados para proporcionarte una comprensi&oacute;n m&aacute;s profunda y pr&aacute;ctica.
             </p>
         </li>
@@ -32,7 +32,7 @@
             </h5>
             <p>
                 Accede a una referencia r&aacute;pida que te permite buscar r&aacute;pidamente conceptos
-                espec&iacute;ficos<br> y obtener informaci&oacute;n precisa.<br>
+                espec&iacute;ficos y obtener informaci&oacute;n precisa.
                 Ideal para revisar r&aacute;pidamente conceptos o encontrar soluciones a problemas espec&iacute;ficos.
             </p>
         </li>
@@ -44,7 +44,7 @@
             </h5>
             <p>
                 Mantenemos nuestra documentaci&oacute;n actualizada con los &uacute;ltimos avances
-                y pr&aacute;cticas<br> recomendadas en programaci&oacute;n.
+                y pr&aacute;cticas recomendadas en programaci&oacute;n.
                 Siempre tendr&aacute;s acceso a recursos relevantes y actuales.
             </p>
         </li>
