Refactor data analysis home page HTML

--- a/rsc/html/DataAHomeBanner.html
+++ b/rsc/html/DataAHomeBanner.html
@@ -24,38 +24,6 @@
         height: 10vh;
         z-index: 100;
       }
-
-      .text {
-        font-family: "Yanone Kaffeesatz";
-        font-size: 50px;
-        display: flex;
-        position: relative;
-        bottom: 5vh;
-        left: 50%;
-        transform: translateX(-50%);
-        user-select: none;
-      }
-      .text .wrapper {
-        padding-left: 10px;
-        padding-right: 10px;
-        padding-top: 10px;
-      }
-      .text .wrapper .letter {
-        transition: ease-out 1s;
-        transform: translateY(40%);
-      }
-      .text .wrapper .shadow {
-        transform: scale(1, -1);
-        color: #999;
-        transition: ease-in 5s, ease-out 5s;
-      }
-      .text .wrapper:hover .letter {
-        transform: translateY(-200%);
-      }
-      .text .wrapper:hover .shadow {
-        opacity: 0;
-        transform: translateY(200%);
-      }
 </style>
 <svg width="529px" height="286px" viewBox="30 27 529 286" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="text-align: center;width: 100%;padding-top: 10vh;">
     <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
@@ -96,7 +64,7 @@
             <polyline id="Bridge" stroke="#81DEFF" points="2.04739336 183 54.2559242 227 96.2274882 47 133.080569 1 302.018438 1 346.680361 44.6280822 386.957346 0 427.905213 43"></polyline>
             <polyline id="PayPal" stroke="#F6F5A6" points="2.04739336 180 53.273159 180 99.2985782 91 137.175355 47 219.077488 47 256.947867 90 301.990521 47 349.080569 137 398.228672 137 432 91"></polyline>
         </g>
-        <g id="x_axis" transform="translate(71.974046, 271.541667)" font-size="11.0833333" font-family=".HelveticaNeueDeskInterface-Regular, .Helvetica Neue DeskInterface" fill="#FFFFFF" opacity="0.4" font-weight="normal">
+        <g id="x_axis" transform="translate(71.974046, 271.541667)" font-size="11.0833333" font-family=".HelveticaNeueDeskInterface-Regular, .Helvetica Neue DeskInterface" fill="#A8A8A8" opacity="0.4" font-weight="normal">
             <text id="1">
                 <tspan x="0.396183206" y="11">1</tspan>
             </text>
@@ -149,73 +117,9 @@
 </svg>
 <div class="overlay"></div>
 
-<div class="text" style="justify-content: center;">
-    <div class="wrapper">
-        <div id="A" class="letter">A</div>
-        <div class="shadow">A</div>
-    </div>
-    <div class="wrapper">
-        <div id="N" class="letter">N</div>
-        <div class="shadow">N</div>
-    </div>
-    <div class="wrapper">
-        <div id="Atwo" class="letter">&Aacute;</div>
-        <div class="shadow">&Aacute;</div>
-    </div>
-    <div class="wrapper">
-        <div id="L" class="letter">L</div>
-        <div class="shadow">L</div>
-    </div>
-    <div class="wrapper">
-        <div id="I" class="letter">I</div>
-        <div class="shadow">I</div>
-    </div>
-    <div class="wrapper">
-        <div id="S" class="letter">S</div>
-        <div class="shadow">S</div>
-    </div>
-    <div class="wrapper">
-        <div id="Itwo" class="letter">I</div>
-        <div class="shadow">I</div>
-    </div>
-    <div class="wrapper">
-        <div id="Stwo" class="letter">S</div>
-        <div class="shadow">S</div>
-    </div>
-    <div class="wrapper">
-        <div id="space" class="letter"> </div>
-        <div class="shadow"> </div>
-    </div>
-    <div class="wrapper">
-        <div id="D" class="letter">D</div>
-        <div class="shadow">D</div>
-    </div>
-    <div class="wrapper">
-        <div id="E" class="letter">E</div>
-        <div class="shadow">E</div>
-    </div>
-    <div class="wrapper">
-        <div id="spacetwo" class="letter"> </div>
-        <div class="shadow"> </div>
-    </div>
-    <div class="wrapper">
-        <div id="Dtwo" class="letter">D</div>
-        <div class="shadow">D</div>
-    </div>
-    <div class="wrapper">
-        <div id="Athree" class="letter">A</div>
-        <div class="shadow">A</div>
-    </div>
-    <div class="wrapper">
-        <div id="T" class="letter">T</div>
-        <div class="shadow">T</div>
-    </div>
-    <div class="wrapper">
-        <div id="O" class="letter">O</div>
-        <div class="shadow">O</div>
-    </div>
-    <div class="wrapper">
-        <div id="Sthree" class="letter">S</div>
-        <div class="shadow">S</div>
-    </div>
+<div style="justify-content: center;">
+    <h1 style="font-family: 'Roboto', sans-serif; color: #787878; font-size: 12vh; text-align: center;padding-bottom: 0;">
+    Analisis de Datos
+    </h1>
+    <hr style="border: 1px solid #C7C7C7; width: 100%; margin-top: 0.5em; margin-bottom: 0.5em;"/>
 </div>
