--- a/rsc/html/docs_home_header.html
+++ b/rsc/html/docs_home_header.html
@@ -5,7 +5,7 @@
     align-items: center;
     width: 100%;
     position: relative;
-    height: 50vh;
+    height: 60vh;
     top: -100px;
 }
 .box-out {
@@ -21,7 +21,7 @@
     /* display: none; */
     width: 900px;
     display: flex;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     align-items: center;
     position: absolute;
     top: 350px;
@@ -56,7 +56,7 @@
     width: 20px;
     height: 100px;
     opacity: 0;
-    position: absolute;
+    position: relative;
     top: -12px;
     right: 8px;
     transition: all .25s;
@@ -121,6 +121,11 @@ position: absolute;
     text-align: center;
     margin-top: 50px;
     margin-bottom: 50px;
+}
+@media (max-width: 600px){
+    .containerbooks{
+        display: none;
+    }
 }
 </style>
 <div class="containerbooks">
