Actualizado texto y traducciones

--- a/rsc/html/Main-Banner1.html
+++ b/rsc/html/Main-Banner1.html
@@ -89,7 +89,7 @@
 
 <div style="text-align: center; padding-top: 4rem">
   <span class="welcome"
-    >&iexcl;Bienvenido al Club de Algoritmia y Programaci&Oacute;n en Python Avanzado!</span
+    >&iexcl;Bienvenido al Club Acad&eacute;mico de Programaci&oacute;n en Python Avanzado!</span
   >
   <p
     style="
@@ -116,6 +116,6 @@
       text-align: center;
     "
   >
-    Donde la pasi&oacute;n por la programaci&oacute;n se encuentra con la maestr&iacute;a en Python.
+    Donde la pasi&oacute;n por la programaci&oacute;n y el amor por las Matem&aacute;ticas se encuentra con la maestr&iacute;a en Python.
   </p>
 </div>
