--- a/rsc/html/footer.html
+++ b/rsc/html/footer.html
@@ -366,7 +366,7 @@ footer .creditos {
       Sta. Cruz Acatl&aacute;n, 53150 Naucalpan de Ju&aacute;rez, M&eacute;x.</h5>
 </div>
 </div>
-  <p class="footer__copyright"> &copy Web Site Club de Programaci&oacute;n en Python Avanzado. Todos los derechos reservados 2023, CAPPA. <br> Esta p&aacute;gina puede ser reproducida con fines no lucrativos, siempre y cuando no se mutile, se cite la fuente completa y su direcci&oacute;n electr&oacute;nica. De otra forma,requiere permiso previo por escrito de la instituci&oacute;n.</p>
+  <p class="footer__copyright"> &copy Web Site Club Acad&eacute;mico de Programaci&oacute;n en Python Avanzado. Todos los derechos reservados 2023, CAPPA. <br> Esta p&aacute;gina puede ser reproducida con fines no lucrativos, siempre y cuando no se mutile, se cite la fuente completa y su direcci&oacute;n electr&oacute;nica. De otra forma,requiere permiso previo por escrito de la instituci&oacute;n.</p>
 </div>
 </div>
 <svg style="position:fixed; top:100vh">
