--- a/rsc/html/headlogos.html
+++ b/rsc/html/headlogos.html
@@ -120,7 +120,7 @@
     </li>
     <li style="list-style: none;text-align: center;">
         <h2 style="font-family: 'Bebas Neue';font-size: 40px;">
-            <span class="fancy">Club de Algoritmia y Programaci&oacute;n en Python Avanzado</span>
+            <span class="fancy">Club Acad&eacute;mico de Programaci&oacute;n en Python Avanzado</span>
         </h2>
     </li>
     <li style="list-style: none;">
@@ -139,7 +139,7 @@
 <ul class="minihead">
     <li style="list-style: none;text-align: center;">
         <h2 style="font-family: 'Bebas Neue';font-size: 15px;">
-            <span class="fancy">Club de Algoritmia y Programaci&oacute;n en Python Avanzado</span>
+            <span class="fancy">Club Acad&eacute;mico de Programaci&oacute;n en Python Avanzado</span>
         </h2>
     </li>
     <li style="list-style: none;align-items: center;justify-content: center;display: flex;">
